--- a/API/MyMDb/MyMDb.csproj
+++ b/API/MyMDb/MyMDb.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\profile_pics\" />
   </ItemGroup>
 
 </Project>
