--- a/API/MyMDb/appsettings.json
+++ b/API/MyMDb/appsettings.json
@@ -12,5 +12,10 @@
   "Jwt": {
     "Key": "MyMDbProjectForDawAndIWillGetA10",
     "Issuer": "MyMDb_AppForWatchingAndRatingMovies2024"
+  },
+  "ConnectionDetails": {
+    "AllowedClients": [ "http://address:3000", "http://api_address.com" ],
+    "ServerAddress": "http://address:5000",
+    "RootLocation": "../../../wwwroot"
   }
 }
