--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/video.js": "^7.3.58",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "hls.js": "^1.5.20",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,6 +21,7 @@
     "video.js": "^8.12.0"
   },
   "devDependencies": {
+    "@types/hls.js": "^0.13.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
