--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "hls.js": "^1.5.20",
     "jwt-decode": "^4.0.0",
+    "latest": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
@@ -31,6 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
-    "vite": "^5.4.10"
+    "vite": "^6.2.0"
   }
 }
